--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello world
+<!DOCTYPE html>
+<html utf-8>
+  <header>
+      <title>Polykarpos Tiftikoglou</title>
+  </header>
+  <body>
+  </body>
+</html>
