--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html utf-8>
-  <header>
+<html>
+  <head>
+      <meta charset="utf-8"></meta>
       <title>Polykarpos Tiftikoglou</title>
-  </header>
+  </head>
   <body>
+    <h1>Polykarpos Tiftikoglou</h1>
+      <h3>Web Developer</h3>
     <footer></footer>
   </body>
 </html>
