--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>Polykarpos Tiftikoglou</title>
   </head>
   <body>
+    <img src="/Users/polykarpos/Pictures/polykarpos.jpg" alt="polykarpos tiftikoglou"/>
     <h1>Polykarpos Tiftikoglou</h1>
       <h3>Web Developer</h3>
     <footer></footer>
