--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
       <title>Polykarpos Tiftikoglou</title>
   </head>
   <body>
+      <ul>
+	<li>About</>
+	<li>Projects</li>
+	<li>Contact</li>
+      </ul>
     <img src="polykarpos.jpg" alt="polykarpos tiftikoglou"/>
     <h1>Polykarpos Tiftikoglou</h1>
-      <h3>Web Developer</h3>
-    <footer></footer>
+      <h4>Web Developer</h4>
+    <footer>
+	    <p>This site created from <i>Polykarpos Tiftikoglou</i></p>
+    </footer>
   </body>
 </html>
