--- a/index.html
+++ b/index.html
@@ -5,16 +5,6 @@
       <title>Polykarpos Tiftikoglou</title>
   </head>
   <body>
-      <ul>
-	<li>About</>
-	<li>Projects</li>
-	<li>Contact</li>
-      </ul>
-    <img src="polykarpos.jpg" alt="polykarpos tiftikoglou"/>
-    <h1>Polykarpos Tiftikoglou</h1>
-      <h4>Web Developer</h4>
-    <footer>
-	    <p>This site created from <i>Polykarpos Tiftikoglou</i></p>
-    </footer>
+   <p>Welcome to my website. This is my personal page. However as you can see is under contraction so stay tuned soon i'll be back!
   </body>
 </html>
