Update my personal web page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-      <meta charset="utf-8"></meta>
-      <title>Polykarpos Tiftikoglou</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="Polykarpos Tiftikoglou, Software developer">
+    <meta name="author" content="Polykarpos Tiftikolgou">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polykarpos Tiftikoglou | Welcome to my page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
   </head>
   <body>
-   <p>Welcome to my website. This is my personal page. However as you can see is under contraction so stay tuned soon i'll be back!
+    <div class="container">
+      <div class="information-card">
+        <img src="polykarpos.jpg" alt="Polykarpos Tiftikoglou">
+        <div class="information">
+          <div>
+            <p class="title">Polykarpos Tiftikoglou</p>
+            <p><i class="fa fa-home info", aria-hidden="true"></i>Veria, GR</p>
+            <p><i class="fa fa-briefcase info", aria-hidden="true"></i>Software Developer</p>
+          </div>
+          <hr>
+          <p class="title"><i class="fa fa-asterisk info", aria-hidden="true"></i>Skills</p>
+          <p>HTML- CSS</p>
+          <div class="background-percent">
+            <div class="html-css">
+            90%
+            </div>
+          </div>
+          <p>C</p>
+          <div class="background-percent">
+            <div class="c">
+            80%
+            </div>
+          </div>
+          <p>MySQL</p>
+          <div class="background-percent">
+            <div class="mysql">
+            75%
+            </div>
+          </div>
+          <p>Java</p>
+          <div class="background-percent">
+            <div class="java">
+            75%
+            </div>
+          </div>
+          <p>Php</p>
+          <div class="background-percent">
+            <div class="php">
+            60%
+            </div>
+          </div>
+          <p>Python</p>
+          <div class="background-percent">
+            <div class="python">
+            50%
+            </div>
+          </div>
+          <hr>
+          <p class="title"><i class="fa fa-globe info", aria-hidden="true"></i>Languages</p>
+          <p>Greek</p>
+          <div class="background-percent">
+            <div class="language-greek"></div>
+          </div>
+          <p>English</p>
+            <div class="background-percent">
+              <div class="language-english"></div>
+            </div>
+        </div>
+      </div>
+      <div class="more-info">
+        <div class="about-me">
+        <p class="title"><i class="fa fa-info-circle info", aria-hidden="true"></i>About Me</p>
+          <p class="center">Hi there, I'm Polykarpos, a software developer from Greece. I love technology and building software. Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Science of Central Greece (former Lamia)</a>and searching for an internship which will help me meet new people,  work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group.</p>
+          <p>In the past I have participated at:</p>
+            <ul class="participate-list fa-ul">
+              <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://en.wikipedia.org/wiki/Fosscomm" target="_blank">FOSSCOM</a> 2014</li>
+              <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i>Battlehack Athens 2015 by <a href="https://www.braintreepayments.com/" target="_blank">Braintree</a> wining partners prize for Best <a href="https://sendgrid.com/" target="_blank">SendGrid</a> API implementation</li>
+              <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://livingdevs.azurewebsites.net/pl-pl/livingdevs/default.aspx" target="_blank">Night of the living Devs</a> 2015 Microsoft hackthon </li>
+            </ul>
+            <p>I'm living in the lovely city of Veria.</p>
+            <p class="hobbies">I also enjoy learning, traveling <i class="fa fa-plane", aria-hidden="true"></i> , photography <i class="fa fa-camera", aria-hidden="true"></i> ,
+              cinema <i class="fa fa-television", aria-hidden="true"></i> , reading <i class="fa fa-book", aria-hidden="true"></i> and sports <i class="fa fa-futbol-o", aria-hidden="true"></i></p>
+        </div>
+      </div>
+      <div class="workedu more-info">
+        <div class="wokedu about-me">
+          <p class="title" style="font-size: 32px;"><i class="fa fa-briefcase info larger"></i>Work Experience</p>
+          <div class="venus">
+            <h5 class="title">Control Room | Venus Growers</h5>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>July 2012 - August 2012</h6>
+            <p>Checking the shield machines and the product before it goes to the oven. Afterwards the process results were stored in the company's database.</p>
+          </div>
+          <hr>
+          <div class="military">
+            <h5 class="title">Military Service</h5>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2016 - May 2017</h6>
+            <p>Special Forces.</p>
+          </div>
+          <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
+          <div class="education">
+            <h5 class="university">Tomas Bata University in Zlin, Czech Rebublic</h5>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2016 - June 2016</h6>
+            <p>Computer Science with Erasmus+ programme.</p>
+            <hr>
+            <h5 class="university">University of Applied Science of Central Greece</h5>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2012 - <span>Current</span></h6>
+            <p>Computer Science with Erasmus+ programme.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+    <footer class="footer-container">
+      <p>Find me on social media.</p>
+      <a class="socialmedia" href="https://www.facebook.com/polykarpostiftikoglou" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a class="socialmedia" href="https://twitter.com/polykarpos_T" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a class="socialmedia" href="https://www.linkedin.com/in/polykarpos-tiftikoglou-8a8762108/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      <a class="socialmedia" href="https://github.com/polykarposT" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a class="socialmedia" href="mailto:ptiftikoglou@gmail.com" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+      <p>Copyrights &copy 2017</p>
+    </footer>
   </body>
 </html>
