--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <hr>
             <h5 class="university">University of Applied Science of Central Greece</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2012 - <span>Current</span></h6>
-            <p>Computer Science with Erasmus+ programme.</p>
+            <p>Computer Science Bacherlor Degree.</p>
           </div>
         </div>
       </div>
