--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <ul class="participate-list fa-ul">
               <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://en.wikipedia.org/wiki/Fosscomm" target="_blank">FOSSCOM</a> 2014</li>
               <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i>Battlehack Athens 2015 by <a href="https://www.braintreepayments.com/" target="_blank">Braintree</a> wining partners prize for Best <a href="https://sendgrid.com/" target="_blank">SendGrid</a> API implementation</li>
-              <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://livingdevs.azurewebsites.net/pl-pl/livingdevs/default.aspx" target="_blank">Night of the living Devs</a> 2015 Microsoft hackthon </li>
+              <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://livingdevs.azurewebsites.net/pl-pl/livingdevs/default.aspx" target="_blank">Night of the living Devs</a> 2015 Microsoft hackathon </li>
             </ul>
             <p>I'm living in the lovely city of Veria.</p>
             <p class="hobbies">I also enjoy learning, traveling <i class="fa fa-plane", aria-hidden="true"></i> , photography <i class="fa fa-camera", aria-hidden="true"></i> ,
