--- a/index.html
+++ b/index.html
@@ -97,17 +97,21 @@
           <div class="military">
             <h5 class="title">Military Service</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2016 - May 2017</h6>
-            <p>Special Forces.</p>
+            <p>Militrary servive in special forces of Hellenic army.</p>
           </div>
           <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
           <div class="education">
+            <h5 class="university">University of Applied Science of Central Greece</h5>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>June 2016- <span>Current</span></h6>
+            <p>Computer Science courses/thesis.</p>
+            <hr>
             <h5 class="university">Tomas Bata University in Zlin, Czech Rebublic</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2016 - June 2016</h6>
-            <p>Computer Science with Erasmus+ programme.</p>
+            <p>Computer Science courses with Erasmus+ programme.</p>
             <hr>
             <h5 class="university">University of Applied Science of Central Greece</h5>
-            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2012 - <span>Current</span></h6>
-            <p>Computer Science Bachelor Degree.</p>
+            <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2012 - February 2016</h6>
+            <p>Computer Science Courses.</p>
           </div>
         </div>
       </div>
