--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="military">
             <h5 class="title">Military Service</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2016 - May 2017</h6>
-            <p>Militrary servive in special forces of Hellenic army.</p>
+            <p>Militrary service in special forces of Hellenic army.</p>
           </div>
           <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
           <div class="education">
