--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i>Battlehack Athens 2015 by <a href="https://www.braintreepayments.com/" target="_blank">Braintree</a> wining partners prize for Best <a href="https://sendgrid.com/" target="_blank">SendGrid</a> API implementation</li>
               <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://livingdevs.azurewebsites.net/pl-pl/livingdevs/default.aspx" target="_blank">Night of the living Devs</a> 2015 Microsoft hackathon </li>
             </ul>
-            <p>I'm living in the lovely city of Veria.</p>
+            <p>I'm living in the lovely city of Veria. I also spend 5 months in Czech Republic with Erasmus+ programme.</p>
             <p class="hobbies">I also enjoy learning, traveling <i class="fa fa-plane", aria-hidden="true"></i> , photography <i class="fa fa-camera", aria-hidden="true"></i> ,
               cinema <i class="fa fa-television", aria-hidden="true"></i> , reading <i class="fa fa-book", aria-hidden="true"></i> and sports <i class="fa fa-futbol-o", aria-hidden="true"></i></p>
         </div>
