--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       <div class="more-info">
         <div class="about-me">
         <p class="title"><i class="fa fa-info-circle info", aria-hidden="true"></i>About Me</p>
-          <p class="center">Hi there, I'm Polykarpos, a software developer from Greece. I love technology and building software. Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Science of Central Greece (former Lamia)</a>and searching for an internship which will help me meet new people,  work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group.</p>
+          <p class="center">Hi there, I'm Polykarpos, a software developer from Greece. I love technology and building software.
+            Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a>and searching for an internship which will help me meet new people,  work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group.</p>
           <p>In the past I have participated at:</p>
             <ul class="participate-list fa-ul">
               <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://en.wikipedia.org/wiki/Fosscomm" target="_blank">FOSSCOM</a> 2014</li>
@@ -101,7 +102,7 @@
           </div>
           <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
           <div class="education">
-            <h5 class="university">University of Applied Science of Central Greece</h5>
+            <h5 class="university">University of Applied Sciences of Central Greece</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>June 2016- <span>Current</span></h6>
             <p>Computer Science courses/thesis.</p>
             <hr>
@@ -109,7 +110,7 @@
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2016 - June 2016</h6>
             <p>Computer Science courses with Erasmus+ programme.</p>
             <hr>
-            <h5 class="university">University of Applied Science of Central Greece</h5>
+            <h5 class="university">University of Applied Sciences of Central Greece</h5>
             <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2012 - February 2016</h6>
             <p>Computer Science Courses.</p>
           </div>
