--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polykarpos Tiftikoglou | Welcome to my page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="imagge/png" href="fav-icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto">
   </head>
