--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div>
             <p class="title">Polykarpos Tiftikoglou</p>
             <p><i class="fa fa-home info", aria-hidden="true"></i>Veria, GR</p>
-            <p><i class="fa fa-briefcase info", aria-hidden="true"></i>Software Developer</p>
+            <p><i class="fa fa-briefcase info", aria-hidden="true"></i>Software Engineer</p>
           </div>
           <hr>
           <p class="title"><i class="fa fa-asterisk info", aria-hidden="true"></i>Skills</p>
@@ -74,7 +74,7 @@
       <div class="more-info">
         <div class="about-me">
         <p class="title"><i class="fa fa-info-circle info", aria-hidden="true"></i>About Me</p>
-          <p class="center">Hi there, I'm Polykarpos, a software developer from Greece. I love technology and building software.
+          <p class="center">Hi there, I'm Polykarpos, a software engineer and wanna be Machine Learning Engineer from Greece. I love technology and building software.
             Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a>and searching for an internship which will help me meet new people,  work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group.</p>
           <p>In the past I have participated at:</p>
             <ul class="participate-list fa-ul">
