--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             <div class="about-me">
                 <p class="title"><i class="fa fa-info-circle info" , aria-hidden="true"></i>About Me</p>
                 <p class="center">Hi there, I'm Polykarpos, a software engineer and wanna be Machine Learning Engineer from Greece. I love technology and building software. Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a>and
-                    searching for an internship which will help me meet new people, work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a>                    research group.</p>
+                    searching for an internship which will help me meet new people, work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group and volunteer at Erasmus Student Network.</p>
                 <p>In the past I have participated at:</p>
                 <ul class="participate-list fa-ul">
                     <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://en.wikipedia.org/wiki/Fosscomm" target="_blank">FOSSCOM</a> 2014</li>
-                    <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i>Battlehack Athens 2015 by <a href="https://www.braintreepayments.com/" target="_blank">Braintree</a> wining partners prize for Best <a href="https://sendgrid.com/" target="_blank">SendGrid</a>                        API implementation</li>
+                    <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i>Battlehack Athens 2015 by <a href="https://www.braintreepayments.com/" target="_blank">Braintree</a> wining partners prize for Best <a href="https://sendgrid.com/" target="_blank">SendGrid</a> API implementation</li>
                     <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://livingdevs.azurewebsites.net/pl-pl/livingdevs/default.aspx" target="_blank">Night of the living Devs</a> 2015 Microsoft hackathon </li>
                 </ul>
                 <p>I'm living in the lovely city of Veria. I also spend 5 months in Czech Republic with Erasmus+ programme.</p>
@@ -93,6 +93,43 @@
             <div class="wokedu about-me">
                 <p class="title" style="font-size: 32px;"><i class="fa fa-briefcase info larger"></i>Work Experience</p>
                 <div class="venus">
+                    <h5 class="title">Machine Learning Intern | Tomas Bata University</h5>
+                    <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2019 - May 2019 | Zlin, Czech Republic</h6>
+                    <p>
+                        The task of the traineeship was to programme Support Vector Machines (SVM) in the Mathematica as a primary aim.
+                        Mathematica in its version 11.3 contains SVM in the form of a method inside the Classify function. But there was no
+                        "direct" access to the code. Therefore, the aim was to programme SVM with access to adjustable parameters, e.g. kernels.
+                        SVM will be used to the comparison fo new classifiers developed at the Faculty of Applied Informatics and SVM in the
+                        future.
+                        The task of the traineeship was the following:
+                        a) to programme the SVM in Mathematica
+                        b) to test the code on suitable test data
+                    </p>
+                </div>
+                <hr>
+                <div class="venus">
+                    <h5 class="title">Sotware Developer | Direct Solutions Innovative Applications and Services Private Company</h5>
+                    <h6><i class="fa fa-calendar info", aria-hidden="true"></i>April 2018 - August 2018 | Athens, Greece</h6>
+                    <p>
+                        Build front-end using Bootstrap 4 and Twig template engine.
+                        Build 2 RESTful APIs for the company's products using Slim 3 a PHP Framework.
+                        Contribute to the development of the company's RESTful API to interact with the company's products RESTful APIs using
+                        Slim 3 a PHP Framework.
+                    </p>
+                </div>
+                <hr>
+                <div class="venus">
+                    <h5 class="title">Software Developer Intern | Direct Solutions Innovative Applications and Services Private Company</h5>
+                    <h6><i class="fa fa-calendar info", aria-hidden="true"></i>October 2017 - March 2018 | Athens, Greece</h6>
+                    <p>
+                        Build front-end using Bootstrap 4 and Twig template engine.
+                        Build 2 RESTful APIs for the company's products using Slim 3 a PHP Framework.
+                        Contribute to the development of the company's RESTful API to interact with the company's products RESTful APIs using
+                        Slim 3 a PHP Framework.
+                    </p>
+                </div>
+                <hr>
+                <div class="venus">
                     <h5 class="title">Control Room | Venus Growers</h5>
                     <h6><i class="fa fa-calendar info", aria-hidden="true"></i>July 2012 - August 2012</h6>
                     <p>Checking the shield machines and the product before it goes to the oven. Afterwards the process results were stored in the company's database.</p>
@@ -103,6 +140,10 @@
                     <h6><i class="fa fa-calendar info", aria-hidden="true"></i>September 2016 - May 2017</h6>
                     <p>Militrary service in special forces of Hellenic army.</p>
                 </div>
+            </div>
+        </div>
+        <div class="workedu more-info">
+            <div class="wokedu about-me">
                 <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
                 <div class="education">
                     <h5 class="university">University of Applied Sciences of Central Greece</h5>
@@ -122,12 +163,10 @@
     </div>
     <footer class="footer-container">
         <p>Find me on social media.</p>
-        <a class="socialmedia" href="https://www.facebook.com/polykarpostiftikoglou" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a class="socialmedia" href="https://twitter.com/polykarpos_T" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a class="socialmedia" href="https://www.linkedin.com/in/polykarpos-tiftikoglou-8a8762108/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
         <a class="socialmedia" href="https://github.com/polykarposT" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a class="socialmedia" href="mailto:ptiftikoglou@gmail.com" target="_top"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <p>Copyrights &copy 2017</p>
+        <p>Copyrights &copy 2019</p>
     </footer>
 </body>
 
