change education and job status

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <div class="more-info">
             <div class="about-me">
                 <p class="title"><i class="fa fa-info-circle info" , aria-hidden="true"></i>About Me</p>
-                <p class="center">Hi there, I'm Polykarpos, a software engineer and wanna be Machine Learning Engineer from Greece. I love technology and building software. Currently, I'm a senior student at the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a>and
-                    searching for an internship which will help me meet new people, work on mind-blowing ideas, improve and test my knowledge and skills on software development. Also, I am a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group and volunteer at Erasmus Student Network.</p>
+                <p class="center">Hi there, I'm Polykarpos, a software engineer and wanna be Machine Learning Engineer from Greece. I love technology and building software. I just graduate from the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a> with degree in Computer Science and
+                    searching for a job which will help work on mind-blowing ideas, improve and test my knowledge and skills on software development and learn from the experts in the field. Also, I was a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group and I am volunteer at Erasmus Student Network.</p>
                 <p>In the past I have participated at:</p>
                 <ul class="participate-list fa-ul">
                     <li><i class="fa-li fa fa-certificate" aria-hidden="true"></i><a href="https://en.wikipedia.org/wiki/Fosscomm" target="_blank">FOSSCOM</a> 2014</li>
@@ -92,6 +92,14 @@
         <div class="workedu more-info">
             <div class="wokedu about-me">
                 <p class="title" style="font-size: 32px;"><i class="fa fa-briefcase info larger"></i>Work Experience</p>
+                <div class="venus">
+                    <h5 class="title">Sales Consultant | Dixons South East Europe</h5>
+                    <h6><i class="fa fa-calendar info" , aria-hidden="true"></i>November 2019 - <span> Current</span> | Veria, Greece</h6>
+                    <p>
+                    Working as sales consultant for Dixons South East Europe.
+                    </p>
+                </div>
+                <hr>
                 <div class="venus">
                     <h5 class="title">Machine Learning Intern | Tomas Bata University</h5>
                     <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2019 - May 2019 | Zlin, Czech Republic</h6>
@@ -147,7 +155,7 @@
                 <p class="title" style="font-size: 32px;"><i class="fa fa-graduation-cap info larger"></i>Education</p>
                 <div class="education">
                     <h5 class="university">University of Applied Sciences of Central Greece</h5>
-                    <h6><i class="fa fa-calendar info", aria-hidden="true"></i>June 2016- <span>Current</span></h6>
+                    <h6><i class="fa fa-calendar info", aria-hidden="true"></i>June 2016 - 2019</h6>
                     <p>Computer Science courses/thesis.</p>
                     <hr>
                     <h5 class="university">Tomas Bata University in Zlin, Czech Rebublic</h5>
