change work experience

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="more-info">
             <div class="about-me">
                 <p class="title"><i class="fa fa-info-circle info" , aria-hidden="true"></i>About Me</p>
-                <p class="center">Hi there, I'm Polykarpos, a software engineer and wanna be Machine Learning Engineer from Greece. I love technology and building software. I just graduate from the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a> with degree in Computer Science and
+                <p class="center">Hi there, I'm Polykarpos, a junior software engineer from Greece. I love technology and building software. I just graduate from the <a href="http://www.teiste.gr" target="_blank">University of Applied Sciences of Central Greece (former Lamia)</a> with degree in Computer Science and
                     searching for a job which will help work on mind-blowing ideas, improve and test my knowledge and skills on software development and learn from the experts in the field. Also, I was a member of the <a href="http://dsg.teiste.gr" target="_blank">DSG</a> research group and I am volunteer at Erasmus Student Network.</p>
                 <p>In the past I have participated at:</p>
                 <ul class="participate-list fa-ul">
@@ -92,14 +92,6 @@
         <div class="workedu more-info">
             <div class="wokedu about-me">
                 <p class="title" style="font-size: 32px;"><i class="fa fa-briefcase info larger"></i>Work Experience</p>
-                <div class="venus">
-                    <h5 class="title">Sales Consultant | Dixons South East Europe</h5>
-                    <h6><i class="fa fa-calendar info" , aria-hidden="true"></i>November 2019 - <span> Current</span> | Veria, Greece</h6>
-                    <p>
-                    Working as sales consultant for Dixons South East Europe.
-                    </p>
-                </div>
-                <hr>
                 <div class="venus">
                     <h5 class="title">Machine Learning Intern | Tomas Bata University</h5>
                     <h6><i class="fa fa-calendar info", aria-hidden="true"></i>February 2019 - May 2019 | Zlin, Czech Republic</h6>
