--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sales Consultant</h3>
                             <div class="subheading mb-3">Dixons South East Europe</div>
-                            <p>Working as part-time sales consultant in technology field.</p>
-                            <p>In my free time developed:
-                            <p>1) Class Management Tool a web app that helps teachers keep
+                            <p>Working as part-time sales consultant in the field of technology.</p>
+                            <p>In my free time:
+                            <p>1) Developed Class Management Tool a web app that helps teachers keep
                             track of their students’ scores and progress in python 3 and
                             Django. See more here
                             <a href="https://github.com/polykarposT/Class-Management-Tool">Class Management Tool</a>.</p>
-                            <p>2) Create a BMI calculator in Flutter (Dart). See more here
+                            <p>2)Created BMI calculator in Flutter (Dart). See more here
                             <a href="https://github.com/polykarposT/bmi_calculator-app">BMI Calculator App</a>.</p>
-                            <p>3) working Django projects and learning React. See more here <a href="https://github.com/polykarposT">Github</a>.</p>
+                            <p>3)Created Django projects and learned React. See more here <a href="https://github.com/polykarposT">Github</a>.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2019 - September 2020</span></div>
                     </div>
@@ -109,7 +109,7 @@
                             <div class="subheading mb-3">Venus Growers</div>
                             <p>Checking the shield machines before the product undergoes
                             the heating process. The process results were stored in the
-                            company' database.</p>
+                            company's database.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2012 - August 2012</span></div>
                     </div>
@@ -195,7 +195,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a software developer, I love travelling and exploring new countries and cultures. I love photography and doing sports.</p>
-                    <p class="mb-0">Also, I like watching series and movies, I like cooking, and I like exploring the latest technology advancements.</p>
+                    <p class="mb-0">Also, I like watching series and movies, I love food and I like exploring the latest technology advances.</p>
                 </div>
             </section>
             <hr class="m-0" />
