--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="subheading mb-3">Tomas Bata University in Zlin</div>
                             <p>The task was to implement a Support Vector Machines (SVM)
                             algorithm in Mathematica from scratch without using the
-                            already build function of the programme. Also, during the
+                            already built function of the programme. Also, during the
                             internship, the SVM algorithm was implemented in python 3.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2019 - May 2019</span></div>
@@ -89,9 +89,9 @@
                             <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">Direct Solutions Innovative Applications and Services Private
                             Company</div>
-                            <p>Back-end developer with main responsibility to develop APIs
+                            <p>Back-end developer with the main responsibility of developing APIs
                             using a Slim framework (PHP) and MySQL. Additionally, I assisted in
-                            development of the front-end page using Bootstrap 4 and Twig Template.</p>
+                            the development of the front-end page using Bootstrap 4 and Twig Template.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2017 - August 2018</span></div>
                     </div>
@@ -99,7 +99,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Military Service</h3>
                             <div class="subheading mb-3">Hellenic Army </div>
-                            <p>Professional drive and ski instructor.</p>
+                            <p>Professional driver and ski instructor.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2016 - May 2017</span></div>
                     </div>
@@ -107,7 +107,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Control Room Responsible</h3>
                             <div class="subheading mb-3">Venus Growers</div>
-                            <p>Checking the shield machines before the product undergoes
+                            <p>Checking shield machines before the product underwent
                             the heating process. The process results were stored in the
                             company's database.</p>
                         </div>
