--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         Veria, Greece·
                         <a href="mailto:ptiftikoglou@gmail.com">ptiftikoglou@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I'm Polykarpos, a junior software developer from Greece. I love technology and building software. I'm currently searching for a
-                    job that will help me improve and test my knowledge and skills on software development and
+                    <p class="lead mb-5">I'm Polykarpos, a junior software developer from Greece. I love technology and building software. I'm currently working as a Developer at Alma Economics. I'm always open for jobs that will help me improve and test my knowledge and skills on software development and
                     learn from the experts in the field. It is my firm belief that even though I am a junior developer, I will be a great asset to your team. </p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/polykarpos-tiftikoglou-8a8762108/"><i class="fab fa-linkedin-in"></i></a>
@@ -57,6 +56,14 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Developer</h3>
+                            <div class="subheading mb-3">Alma Economics</div>
+                            <p>Creating interactive web apps for various projects using Django, PostgreSQL, Javascript, Bootstrap and hosting them on Heroku Cloud Platform. Managing company's internal databases and creating scripts in Python and Pandas.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Currently</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sales Consultant</h3>
