make dark theme default

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
-<body id="page-top" data-theme="light">
+<body id="page-top" data-theme="dark">
     <!-- Theme toggle button -->
     <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
         <i class="fas fa-moon" aria-hidden="true"></i>
